--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
     </build>
 
     <dependencies>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.tomee</groupId>-->
+            <!--<artifactId>javaee-api</artifactId>-->
+            <!--<version>7.0</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>javax.servlet</groupId>
